--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Sol Kim</h1>
-      <p>I'm <span class="typed" data-typed-items="Infectious Disease Researcher, Applied Mathematician, Data Analyst, Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Infectious Disease Researcher., Applied Mathematician., Data Analyst., Developer."></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -91,7 +91,7 @@
         <div class="section-title">
           <h2>About Me</h2>
           <p>I am currently enrolled in the Integrated Master's and Ph.D. program at Yonsei University. I joined the Department of Computational Mathematics (Mathematics) in March 2021. My advisor is Professor JeeHyun Lee. 
-            My research focuses on applied mathematics, with a particular interest in mathematical biology. Specifically, I am involved in modeling infectious diseases. Through my research, I aim to develop mathematical models that can provide insights into the spread and control of infectious diseases.</p>
+            </p>
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
@@ -100,28 +100,29 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Applied Mathematician &amp; Ph.D student.</h3>
             <p class="fst-italic">
+              My research focuses on applied mathematics, with a particular interest in mathematical biology. Specifically, I am involved in modeling infectious diseases. Through my research, I aim to develop mathematical models that can provide insights into the spread and control of infectious diseases.
               In addition to this, I analyze numerical methods for solving ordinary differential equations (ODEs) and conduct research on numerical optimization. Recently, I have been working on solving optimization problems using artificial intelligence techniques, particularly deep neural networks.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>29 July 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>kimsol729.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kimsol729@yonsei.ac.kr</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+82 10 9660 3844</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Seoul, KOREA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Office:</strong> <span>Sci. Bldg. 127b, Yonsei Univ.</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Ph.D Student</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>kimsol729@yonsei.ac.kr</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Academic Advisor:</strong> <span>Prof. JeeHyun Lee</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Research Interests:</strong> <span> Numerical Analysis, Mathematical Biology, Optimization, Deep Learning (AI)</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Specifically, I am involved in modeling infectious diseases such as COVID-19, Varicella-Zoster Virus (VZV), and Carbapenemase-Producing Enterobacteriaceae (CPE) in Intensive Care Units (ICU). Through my research, I aim to develop mathematical models that can provide insights into the spread and control of these infectious diseases.
+              Specifically, I am involved in modeling infectious diseases such as COVID-19, Varicella-Zoster Virus (VZV), and Carbapenemase-Producing Enterobacteriaceae (CPE) in Intensive Care Units (ICU).
             </p>
           </div>
         </div>
@@ -140,35 +141,35 @@
 
         <div class="row no-gutters">
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
-            </div>
-          </div>
-
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Published Papers</strong> Including SCI-Q1 Journals</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+            <div class="count-box">
+              <i class="bi bi-emoji-smile"></i>
+              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Conference Presentations</strong> Poster and Oral Presentations</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Awards</strong> aut commodi quaerat</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>TA Experience</strong> Teaching Assistantship within the University</p>
             </div>
           </div>
 
@@ -191,7 +192,7 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">70%</i></span>
+              <span class="skill">HTML <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -216,14 +217,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">R <i class="val">70%</i></span>
+              <span class="skill">R <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">LaTeX <i class="val">90%</i></span>
+              <span class="skill">LaTeX <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -254,7 +255,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Sol Kim</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
