--- a/index.html
+++ b/index.html
@@ -596,12 +596,7 @@
                 <h4>Call:</h4>
                 <p>+82 10-9660-3844</p>
               </div>
-
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19471.124273568086!2d-74.00809803536376!3d40.71285204431989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a097e8d7055%3A0xabe141b075f3b8b7!2s1775+Broadway%2C+New+York%2C+NY+10019%2C+USA!5e0!3m2!1sen!2s!4v1637762362597!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
-
-              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3162.571864063247!2d126.9341277!3d37.5651496!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c99ce0fe0ca97%3A0x1c4f4564787a113d!2z7Jew7IS464yA7ZWZ6rWQIOydtOqzvOuMgO2VmQ!5e0!3m2!1sko!2skr!4v1716181412903!5m2!1sko!2skr" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
