--- a/index.html
+++ b/index.html
@@ -582,13 +582,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Science Hall, 50 Yonsei-ro, Seodaemun-gu, Seoul, South Korea</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>kimsol729@yonsei.ac.kr</p>
               </div>
 
               <div class="phone">
