--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>COVID-19</h4> <!-- 여기에 제목을 추가 -->
+              <!-- <div class="portfolio-info">
+                <h4>COVID-19</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -347,8 +347,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>VZV</h4> <!-- 여기에 제목을 추가 -->
+              <!-- <div class="portfolio-info">
+                <h4>VZV</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -359,8 +359,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>CRE in ICU</h4> <!-- 여기에 제목을 추가 -->
+              <!-- <div class="portfolio-info">
+                <h4>CRE in ICU</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -371,8 +371,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Deep Learning</h4> <!-- 여기에 제목을 추가 -->
+              <!-- <div class="portfolio-info">
+                <h4>Deep Learning</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -383,8 +383,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Reinforcement Learing</h4> 
+              <!-- <div class="portfolio-info">
+                <h4>Reinforcement Learing</h4>  -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -596,7 +596,7 @@
                 <h4>Call:</h4>
                 <p>+82 10-9660-3844</p>
               </div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3162.571864063247!2d126.9341277!3d37.5651496!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c99ce0fe0ca97%3A0x1c4f4564787a113d!2z7Jew7IS464yA7ZWZ6rWQIOydtOqzvOuMgO2VmQ!5e0!3m2!1sko!2skr!4v1716181412903!5m2!1sko!2skr" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.6239291412294!2d126.93464050000001!3d37.5639232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c99ce0fe0ca97%3A0x1c4f4564787a113d!2sYonsei%20University%20College%20of%20Science!5e0!3m2!1sen!2skr!4v1716181978242!5m2!1sen!2skr"  frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
