--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Applied Mathematician &amp; Ph.D student.</h3>
-            <p class="fst-italic">
+            <!-- <p class="fst-italic">
               My research focuses on applied mathematics, with a particular interest in mathematical biology. Specifically, I am involved in modeling infectious diseases. Through my research, I aim to develop mathematical models that can provide insights into the spread and control of infectious diseases.
               In addition to this, I analyze numerical methods for solving ordinary differential equations (ODEs) and conduct research on numerical optimization. Recently, I have been working on solving optimization problems using artificial intelligence techniques, particularly deep neural networks.
-            </p>
+            </p> -->
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -136,7 +136,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row no-gutters">
@@ -256,7 +256,7 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Summary</h3>
-            <div class="resume-item pb-0">
+            <!-- <div class="resume-item pb-0">
               <h4>Sol Kim</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
@@ -264,7 +264,7 @@
                 <li>+82 10-9660-3844</li>
                 <li>kimsol729@yonsei.ac.kr</li>
               </ul>
-            </div>
+            </div> -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
@@ -280,8 +280,9 @@
               <p>Bachelor of Science, Summa cum laude</p>
             </div>
           </div>
-          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
+          
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
               <h4>Senior graphic design specialist</h4>
               <h5>2019 - Present</h5>
@@ -304,8 +305,86 @@
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
               </ul>
             </div>
-          </div> -->
+          </div>
         </div>
+
+        <h3 class="resume-title">Teaching Assistant</h3>
+        <div class="resume-item">
+          <h4>NUMERICAL ANALYSIS (MAT3114.01-00)</h4>
+          <h5>2024 Spring</h5>
+          <p><em>Prof. Lee, JeeHyun</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>MATHEMATICS FOR HUMANITIES AND SOCIAL SCIENCE (UCC1111.01-00)</h4>
+          <h5>2023 Winter</h5>
+          <p><em>Prof. Kim Dongho</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>MILLENIUM PROBLEMS AND SEMINAR (MAT6055.01-00)</h4>
+          <h5>2023 Fall</h5>
+          <p><em>Prof. Lee, JeeHyun</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>MATHEMATICS FOR HUMANITIES AND SOCIAL SCIENCE (UCC1111.01-00)</h4>
+          <h5>2023 Summer</h5>
+          <p><em>Prof. Kim Dongho</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>NUMERICAL ANALYSIS (MAT3114.01-00)</h4>
+          <h5>2023 Spring</h5>
+          <p><em>Prof. Lee, JeeHyun</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>MATHEMATICS FOR HUMANITIES AND SOCIAL SCIENCE (UCC1111.01-00)</h4>
+          <h5>2022 Winter</h5>
+          <p><em>Prof. Kim Dongho</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>ENGINEERING MATHEMATICS(2) (MAT1012.06-00)</h4>
+          <h5>2022 Fall</h5>
+          <p><em>Prof. Kim Dongho</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>CALCULUS & VECTOR ANALYSIS(2) (MAT1002.03-00)</h4>
+          <h5>2022 Fall</h5>
+          <p><em>Prof. Kim Dongho</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>CALCULUS & VECTOR ANALYSIS(2) (MAT1002.01-00)</h4>
+          <h5>2022 Summer</h5>
+          <p><em>Prof. Kim Dongho</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>NUMERICAL ANALYSIS (MAT3114.01-00)</h4>
+          <h5>2022 Spring</h5>
+          <p><em>Prof. Lee, JeeHyun</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>ONLINE CLASS-ENGINEERING MATHEMATICS(4) (MAT2017.05-01)</h4>
+          <h5>2021 Fall</h5>
+          <p><em>Prof. KIM SunYoung</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>ONLINE CLASS-ENGINEERING MATHEMATICS(4) (MAT2017.04-01)</h4>
+          <h5>2021 Fall</h5>
+          <p><em>Prof. Park Donghoon</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>ENGINEERING MATHEMATICS(2) (MAT1012.09-02)</h4>
+          <h5>2021 Fall</h5>
+          <p><em>Prof.Soojeong Kim</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>Online Class-CALCULUS & VECTOR ANALYSIS(2) (MAT1002.01(01)-MAT1002.01(02))</h4>
+          <h5>2021 Spring</h5>
+          <p><em>Prof. Park, Seung Kyung</em></p>
+        </div>
+        <div class="resume-item">
+          <h4>ENGINEERING MATHEMATICS(4) (MAT2017.01-02)</h4>
+          <h5>2021 Spring</h5>
+          <p><em>Prof. Park Donghoon</em></p>
+        </div>
+      </div>
 
       </div>
     </section><!-- End Resume Section -->
