--- a/index.html
+++ b/index.html
@@ -284,25 +284,22 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <a href="https://doi.org/10.3349/ymj.2022.0471"><h4>Mathematical Modeling of COVID-19 Transmission and Intervention in South Korea: A Review of Literature</h4></a>
+              <h5>Published online Dec 16, 2022</h5>
+              <p><em>Yonsei Med J. 2023 Jan;64(1):1-10. English.</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                <li>Hyojung Lee,1 Sol Kim,2 Minyoung Jeong,2 Eunseo Choi,1 Hyeonjeong Ahn,1 and Jeehyun Lee</li>
+                <!-- <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
                 <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <a href="https://doi.org/10.1016/j.vaccine.2024.05.016"><h4>The epidemiologic and economic impact of varicella and herpes zoster vaccination in South Korea: A mathematical modelling study</h4></a>
+              <h5>Received 3 February 2024, Revised 7 May 2024, Accepted 10 May 2024, Available online 18 May 2024.</h5>
+              <p><em>In Press, Corrected Proof</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Sol Kim a 1, Jae-Ki Choi b c 1, Jiyeon Suh d 3, Sun Hee Park b c 2, Jeehyun Lee a 2</li>
               </ul>
             </div>
           </div>
