--- a/index.html
+++ b/index.html
@@ -284,24 +284,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
-              <a href="https://doi.org/10.3349/ymj.2022.0471"><h4>Mathematical Modeling of COVID-19 Transmission and Intervention in South Korea: A Review of Literature</h4></a>
-              <h5>Published online Dec 16, 2022</h5>
-              <p><em>Yonsei Med J. 2023 Jan;64(1):1-10. English.</em></p>
+              <h4>COVID-19</h4></a>
+              <h5>Jun 2022 - Aug 2022</h5>
               <ul>
-                <li>Hyojung Lee,1 Sol Kim,2 Minyoung Jeong,2 Eunseo Choi,1 Hyeonjeong Ahn,1 and Jeehyun Lee</li>
-                <!-- <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
+                <li>Lee H, <b>Kim S</b>, Jeong M, Choi E, Ahn H, Lee J. <a href="https://doi.org/10.3349/ymj.2022.0471">"Mathematical Modeling of COVID-19 Transmission and Intervention in South Korea: A Review of Literature."</a>,  Yonsei Med J. 2023 Jan;64(1):1-10.</li>
               </ul>
             </div>
+
             <div class="resume-item">
-              <a href="https://doi.org/10.1016/j.vaccine.2024.05.016"><h4>The epidemiologic and economic impact of varicella and herpes zoster vaccination in South Korea: A mathematical modelling study</h4></a>
-              <h5>Received 3 February 2024, Revised 7 May 2024, Accepted 10 May 2024, Available online 18 May 2024.</h5>
-              <p><em>In Press, Corrected Proof</em></p>
+              <h4>Varicella-Zoster Virus (VZV)</h4></a>
+              <h5>Aug 2022 - Mar 2024</h5>
               <ul>
-                <li>Sol Kim a 1, Jae-Ki Choi b c 1, Jiyeon Suh d 3, Sun Hee Park b c 2, Jeehyun Lee a 2</li>
+                <li><b>Sol Kim</b>, Jae-Ki Choi, Jiyeon Suh, Sun Hee Park, Jeehyun Lee, <a href="https://doi.org/10.1016/j.vaccine.2024.05.016">"The epidemiologic and economic impact of varicella and herpes zoster vaccination in South Korea: A mathematical modelling study."</a>, Vaccine, 2024.</li>
               </ul>
             </div>
+
           </div>
         </div>
 
@@ -518,41 +515,41 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Publications</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Projects</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+            <h4 class="title"><a href="">COVID-19</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
+            <h4 class="title"><a href="">Varicella-Zoster Virus (VZV)</a></h4>
             <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">CRE in ICU</a></h4>
+            <p class="description">In Progress</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <h4 class="title"><a href="">Deep Learning</a></h4>
+            <p class="description">In Progress</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <h4 class="title"><a href="">Reinforcement Learning</a></h4>
+            <p class="description">In Progress</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+          <!-- <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
+          </div> -->
         </div>
 
       </div>
