--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Lee JeeHyun</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h4>Professor</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -589,7 +589,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>H.D Kwon</h3>
-                <h4>Designer</h4>
+                <h4>Professor</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -602,7 +602,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>S.H Park</h3>
-                <h4>Store Owner</h4>
+                <h4>Professor</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -615,7 +615,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>J.K Choi</h3>
-                <h4>Freelancer</h4>
+                <h4>Professor</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -628,7 +628,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>Y.J Beak</h3>
-                <h4>Entrepreneur</h4>
+                <h4>Professor</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -641,7 +641,7 @@
                 </p>
                 <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
                 <h3>J.Y Choi</h3>
-                <h4>Entrepreneur</h4>
+                <h4>Professor</h4>
               </div>
             </div><!-- End testimonial item -->
 
