--- a/index.html
+++ b/index.html
@@ -308,27 +308,27 @@
           <h5>2024 Spring</h5>
           <p><em>Prof. Lee, JeeHyun</em></p>
         </div>
-        <div class="resume-item">
+        <!-- <div class="resume-item">
           <h4>MATHEMATICS FOR HUMANITIES AND SOCIAL SCIENCE (UCC1111.01-00)</h4>
           <h5>2023 Winter</h5>
           <p><em>Prof. Kim Dongho</em></p>
-        </div>
+        </div> -->
         <div class="resume-item">
           <h4>MILLENIUM PROBLEMS AND SEMINAR (MAT6055.01-00)</h4>
           <h5>2023 Fall</h5>
           <p><em>Prof. Lee, JeeHyun</em></p>
         </div>
-        <div class="resume-item">
+        <!-- <div class="resume-item">
           <h4>MATHEMATICS FOR HUMANITIES AND SOCIAL SCIENCE (UCC1111.01-00)</h4>
           <h5>2023 Summer</h5>
           <p><em>Prof. Kim Dongho</em></p>
-        </div>
+        </div> -->
         <div class="resume-item">
           <h4>NUMERICAL ANALYSIS (MAT3114.01-00)</h4>
           <h5>2023 Spring</h5>
           <p><em>Prof. Lee, JeeHyun</em></p>
         </div>
-        <div class="resume-item">
+        <!-- <div class="resume-item">
           <h4>MATHEMATICS FOR HUMANITIES AND SOCIAL SCIENCE (UCC1111.01-00)</h4>
           <h5>2022 Winter</h5>
           <p><em>Prof. Kim Dongho</em></p>
@@ -347,13 +347,13 @@
           <h4>CALCULUS & VECTOR ANALYSIS(2) (MAT1002.01-00)</h4>
           <h5>2022 Summer</h5>
           <p><em>Prof. Kim Dongho</em></p>
-        </div>
+        </div> -->
         <div class="resume-item">
           <h4>NUMERICAL ANALYSIS (MAT3114.01-00)</h4>
           <h5>2022 Spring</h5>
           <p><em>Prof. Lee, JeeHyun</em></p>
         </div>
-        <div class="resume-item">
+        <!-- <div class="resume-item">
           <h4>ONLINE CLASS-ENGINEERING MATHEMATICS(4) (MAT2017.05-01)</h4>
           <h5>2021 Fall</h5>
           <p><em>Prof. KIM SunYoung</em></p>
@@ -362,7 +362,7 @@
           <h4>ONLINE CLASS-ENGINEERING MATHEMATICS(4) (MAT2017.04-01)</h4>
           <h5>2021 Fall</h5>
           <p><em>Prof. Park Donghoon</em></p>
-        </div>
+        </div> -->
         <div class="resume-item">
           <h4>ENGINEERING MATHEMATICS(2) (MAT1012.09-02)</h4>
           <h5>2021 Fall</h5>
@@ -408,8 +408,6 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <!-- <div class="portfolio-info">
-                <h4>COVID-19</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -420,8 +418,6 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <!-- <div class="portfolio-info">
-                <h4>VZV</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -432,8 +428,6 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <!-- <div class="portfolio-info">
-                <h4>CRE in ICU</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -444,8 +438,6 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <!-- <div class="portfolio-info">
-                <h4>Deep Learning</h4> 여기에 제목을 추가 -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -456,8 +448,6 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <!-- <div class="portfolio-info">
-                <h4>Reinforcement Learing</h4>  -->
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -523,10 +513,10 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-virus"></i></div>
             <h4 class="title"><a href="">COVID-19</a></h4>
-            <p class="description">A Review of Reteratures, South Korea, athematical Modeling</p>
+            <p class="description">A Review of Literature, South Korea, athematical Modeling</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-virus"></i></div>
+            <div class="icon"><i class="bi bi-vaccine"></i></div>
             <h4 class="title"><a href="">Varicella-Zoster Virus (VZV)</a></h4>
             <p class="description">Cost Effectiveness Analysis, Sensitivity Analysis, Vaccination Strategies</p>
           </div>
