--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             <p class="description">A Review of Literature, South Korea, athematical Modeling</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-vaccine"></i></div>
+            <div class="icon"><i class="bi bi-briefcase-medical"></i></div>
             <h4 class="title"><a href="">Varicella-Zoster Virus (VZV)</a></h4>
             <p class="description">Cost Effectiveness Analysis, Sensitivity Analysis, Vaccination Strategies</p>
           </div>
@@ -648,7 +648,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p> Quisquam quos quisquam cupiditate.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
