--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             <p class="description">A Review of Literature, South Korea, athematical Modeling</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-syringe"></i></div>
+            <div class="icon"><i class="bi bi-prescription2"></i></div>
             <h4 class="title"><a href="">Varicella-Zoster Virus (VZV)</a></h4>
             <p class="description">Cost Effectiveness Analysis, Sensitivity Analysis, Vaccination Strategies</p>
           </div>
